--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,17 +5,17 @@ phases:
       python: 3.8
     commands:
       - echo "Installing dependencies..."
-      - pip install -r requirements.txt -t lib # external libraries are saved to lib folder on root dir
+#      - pip install -r requirements.txt -t lib # external libraries are saved to lib folder on root dir
+  pre_build:
+    commands:
+      - sam validate --template ${CODEBUILD_SRC_DIR}/template.yaml
   build:
     commands:
-      - echo "Zipping deployment package..."
-      - cd lib
-      - zip -r9 ../deployment_package.zip .   # zip everything in lib folder and save it under root dir
-      - cd ..
-      - zip -g deployment_package.zip function/app.py  # add lambda function to zipped folder
+      - sam build --template ${CODEBUILD_SRC_DIR}/template.yaml
   post_build:
     commands:
-      - echo "Updating lambda Function..."
-      - # use aws command to update function code with deployment_package.zip
-      - aws lambda update-function-code --function-name codebuild-practice-lambda --zip-file fileb://deployment_package.zip
-      - echo "DONE!!"
+      - sam package --output-template-file packaged.yaml --s3-bucket codebuild-practice9784
+
+artifacts:
+  files:
+    - packaged.yaml
