--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,6 +11,7 @@ phases:
       - sam validate --template ${CODEBUILD_SRC_DIR}/template.yaml
   build:
     commands:
+#      - sam build --template ${CODEBUILD_SRC_DIR}/template.yaml
       - sam build --template ${CODEBUILD_SRC_DIR}/template.yaml
   post_build:
     commands:
