--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,8 @@ phases:
       - sam build
   post_build:
     commands:
-      - sam package --output-template-file packaged.yaml --s3-bucket codebuild-practice9784
+#      - sam package --output-template-file packaged.yaml --s3-bucket codebuild-practice9784
+      - sam package --s3-bucket codebuild-practice9784
 
 artifacts:
   files:
