--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
       - sam validate --template ${CODEBUILD_SRC_DIR}/template.yaml
   build:
     commands:
-#      - sam build --template ${CODEBUILD_SRC_DIR}/template.yaml
+#      - sam build --template ${CODEBUILD_SRC_DIR}/template.yaml  does the same thing as sam build
       - sam build
   post_build:
     commands:
@@ -20,4 +20,4 @@ phases:
 
 artifacts:
   files:
-    - packaged.yaml
+    - '**/*'
