--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,13 +11,13 @@ phases:
       - sam validate --template ${CODEBUILD_SRC_DIR}/template.yaml
   build:
     commands:
-#      - sam build --template ${CODEBUILD_SRC_DIR}/template.yaml  does the same thing as sam build
-      - sam build
+      - sam build --template ${CODEBUILD_SRC_DIR}/template.yaml
+#      - sam build        does the same thing as sam build --template assuming we created a codebuild through the console and console knows template.yaml is at root.
   post_build:
     commands:
-#      - sam package --output-template-file packaged.yaml --s3-bucket codebuild-practice9784
-#      - sam package --s3-bucket codebuild-practice9784
+      - sam package --output-template-file packaged.yaml --s3-bucket codebuild-practice9784 --debug
+#      - sam package --s3-bucket codebuild-practice9784   this isn't needed assuming we created a codebuild through the console and already designated an s3 bucket to push artifacts to.
 
 artifacts:
   files:
-    - '**/*'
+    - packaged.yaml
