--- a/template.yaml
+++ b/template.yaml
@@ -14,6 +14,7 @@ Resources:
       CodeUri: function/
       Handler: app.lambda_handler
       Runtime: python3.8
+      FunctionName: Codebuild-practice-lambda
       Events:
         HelloWorld:
           Type: Api
