--- a/template.yaml
+++ b/template.yaml
@@ -16,16 +16,12 @@ Resources:
       Runtime: python3.8
       FunctionName: Codebuild-practice-lambda
       Events:
-        HelloWorld:
-          Type: Api
+        RandomQueue:
+          Type: SQS
           Properties:
-            Path: /hello
-            Method: get
+            Queue: !Sub "arn:aws:sqs:${AWS::Region}:${AWS::AccountId}:StoreCheckoutQueue"
 
 Outputs:
   HelloWorldFunction:
     Description: "Hello World Lambda Function ARN"
     Value: !GetAtt HelloWorldFunction.Arn
-  HelloWorldFunctionIamRole:
-    Description: "Implicit IAM Role created for Hello World function"
-    Value: !GetAtt HelloWorldFunctionRole.Arn
