--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,9 +9,7 @@ phases:
       - sam validate --template ${CODEBUILD_SRC_DIR}/template.yaml
   build:
     commands:
-      - cd function
-      - pip install -r requirements.txt
-      - cd..
+      - pip install -r function/requirements.txt
 #      - sam build --template ${CODEBUILD_SRC_DIR}/template.yaml
       - sam build
   post_build:
