--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,12 +11,16 @@ phases:
     commands:
       - pip install -r function/requirements.txt
 #      - sam build --template ${CODEBUILD_SRC_DIR}/template.yaml
-      - sam build
+      - sam build  # sam build will always build the template.yaml file
   post_build:
     commands:
+# dont cd into .aws-sam/build folder as when we create the output file with --output-template-file, it will create that file in the current folder we are in. Rather specify path to template file we want to package.
+# The artifacts files property is looking for files in the main project folder.
       - sam package --template-file .aws-sam/build/template.yaml --output-template-file packaged.yaml --s3-bucket codebuild-practice9784 --debug
-#      - sam package --s3-bucket codebuild-practice9784   this isn't needed assuming we created a codebuild through the console and already designated an s3 bucket to push artifacts to.
-
+# Automatically Execute the following command to deploy the packaged template sam deploy --template-file /codebuild/output/src1197669698/src/packaged.yaml --stack-name <YOUR STACK NAME>
+# https://stackoverflow.com/questions/59815363/aws-sam-cli-ignoring-my-python-dependencies-during-build-package-and-deploy
+# sam build builds template.yaml with dependencies and stores it in the path: .aws-sam/build/template.yaml.
+# We have to package the template with dependencies, then sam will automatically deploy it
 artifacts:
   files:
     - packaged.yaml
