--- a/myLayer/buildspec.yml
+++ b/myLayer/buildspec.yml
@@ -6,10 +6,10 @@ phases:
   pre_build:
     commands:
       - echo "Installing dependencies..."
-      - sam validate --template template.yaml
+      - sam validate --template ./template.yaml
   build:
     commands:
-      - pip install -r function/requirements.txt
+      - pip install -r ../function/requirements.txt
 #      - sam build --template ${CODEBUILD_SRC_DIR}/template.yaml
       - sam build  # sam build will always build the template.yaml file
   post_build:
